--- a/style.css
+++ b/style.css
@@ -80,3 +80,103 @@ body {
 .fa-cart-shopping {
     margin-right: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+    .top-nav-bar {
+        height: 118px;
+        border-bottom: 0;
+    }
+
+    .search-box {
+        width: 100%;
+    }
+    
+    .menu-bar {
+        width: 100%;
+    }
+
+    \.menu-bar ul {
+        margin: 10px 0;
+        width: 100%;
+    }
+    
+}
+
+/*...............................side menu............................*/
+
+.side-menu {
+    height: 79vh;
+    width: 15%;
+    font-size: 15px;
+    float: left;
+    z-index: 2;
+    background-color: #ddd;
+}
+
+.side-menu ul {
+    margin-left: 10px;
+}
+
+.side-menu ul li {
+    list-style-type: none;
+    font-weight: bold;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.side-menu ul li:hover {
+    color: #ff523b;
+}
+
+.side-menu ul li ul {
+    display: none;
+    z-index: 10;
+    top: 77px;
+}
+
+.side-menu ul li:hover ul {
+    display: block;
+    height: 400px;
+    margin-left: 12%;
+    padding: 0 100px 10px 10px;
+    position: fixed;
+    background-color: #ece7e7;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.fa-angle-right {
+    margin-top: 4px;
+    margin-right: 8px;
+    float: right;
+}
+
+#menu-bar, #close-btn {
+    font-size: 30px;
+    margin: 10px;
+    color: #ff523b;
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    .side-menu {
+        width: 34%;
+        z-index: 20;
+        top: 133px;
+        position: fixed;
+        font-size: 10px;
+        display: none;
+    }
+
+    .side-menu ul li ul {
+        top: 133px;
+    }
+
+    .side-menu ul li:hover ul {
+        margin-left: 24%;
+    }
+
+    #menu-bar {
+        display: block;
+    }
+    
+}
