--- a/style.css
+++ b/style.css
@@ -180,3 +180,26 @@ body {
     }
     
 }
+
+/* ...............................slider............................ */
+
+.slider {
+    width: 85%;
+    margin-left: 15%;
+    padding: 0 10px;
+}
+
+.carousel {
+    box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5);
+}
+
+.carousel-indicators {
+    z-index: 1 !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .slider {
+        width: 100%;
+        margin-left: 0;
+    }
+}
