--- a/style.css
+++ b/style.css
@@ -1,205 +1,308 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: aliceblue;
-    font-family: Arial, sans-serif;
+  background-color: aliceblue;
+  font-family: Arial, sans-serif;
 }
 
 .top-nav-bar {
-    height: 57px;
-    top: 0;
-    position: sticky;
-    background-color: #fff;
-    margin-bottom: 20px;
-    border-bottom: 3px solid #ff523b;
-    z-index: 2;
+  height: 57px;
+  top: 0;
+  position: sticky;
+  background-color: #fff;
+  margin-bottom: 20px;
+  border-bottom: 3px solid #ff523b;
+  z-index: 2;
 }
 
 .logo {
-    height: 40px;
-    margin: 5px 10px;
+  height: 40px;
+  margin: 5px 10px;
 }
 
 .form-control {
-    margin-top: 9px;
-    margin-left: 30px;
-    border: 1px solid #ff523b !important;
-    border-radius: 20px 0 0 20px !important;
-    box-shadow: none !important;
+  margin-top: 9px;
+  margin-left: 30px;
+  border: 1px solid #ff523b !important;
+  border-radius: 20px 0 0 20px !important;
+  box-shadow: none !important;
 }
 
 .input-group-text {
-    background: #ff523b !important;
-    border: 1px solid #ff523b !important;
-    margin: 8.5px 10px 3px 0;
-    border-radius: 0 20px 20px 0 !important;
-    cursor: pointer;
+  background: #ff523b !important;
+  border: 1px solid #ff523b !important;
+  margin: 8.5px 10px 3px 0;
+  border-radius: 0 20px 20px 0 !important;
+  cursor: pointer;
 }
 
 .search-box {
-    display: inline-flex;
-    width: 60%;
+  display: inline-flex;
+  width: 60%;
 }
 
 .fa-magnifying-glass {
-    color: aliceblue;
-    font-size: 20px;
+  color: aliceblue;
+  font-size: 20px;
 }
 
 .menu-bar {
-    width: 40%;
-    height: 57px;
-    float: right;
+  width: 40%;
+  height: 57px;
+  float: right;
 }
 
 .menu-bar ul {
-    display: inline-flex;
-    float: right;
+  display: inline-flex;
+  float: right;
 }
 
 .menu-bar ul li {
-    border-left: 1px solid #fff;
-    list-style-type: none;
-    padding: 15px 35px;
-    text-align: center;
-    background-color: #ff523b;
-    cursor: pointer;
+  border-left: 1px solid #fff;
+  list-style-type: none;
+  padding: 15px 35px;
+  text-align: center;
+  background-color: #ff523b;
+  cursor: pointer;
 }
 
 .menu-bar ul li a {
-    font-size: 16px;
-    font-weight: bold;
-    color: aliceblue;
-    text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  color: aliceblue;
+  text-decoration: none;
 }
 
 .fa-cart-shopping {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 @media only screen and (max-width: 600px) {
-    .top-nav-bar {
-        height: 118px;
-        border-bottom: 0;
-    }
+  .top-nav-bar {
+    height: 118px;
+    border-bottom: 0;
+  }
 
-    .search-box {
-        width: 100%;
-    }
-    
-    .menu-bar {
-        width: 100%;
-    }
+  .search-box {
+    width: 100%;
+  }
 
-    \.menu-bar ul {
-        margin: 10px 0;
-        width: 100%;
-    }
-    
+  .menu-bar {
+    width: 100%;
+  }
+
+  \.menu-bar ul {
+    margin: 10px 0;
+    width: 100%;
+  }
 }
 
 /*...............................side menu............................*/
 
 .side-menu {
-    height: 79vh;
-    width: 15%;
-    font-size: 15px;
-    float: left;
-    z-index: 2;
-    background-color: #ddd;
+  height: 90vh;
+  width: 15%;
+  font-size: 15px;
+  float: left;
+  z-index: 2;
+  background-color: #ddd;
 }
 
 .side-menu ul {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .side-menu ul li {
-    list-style-type: none;
-    font-weight: bold;
-    margin-top: 10px;
-    cursor: pointer;
+  list-style-type: none;
+  font-weight: bold;
+  margin-top: 10px;
+  cursor: pointer;
 }
 
 .side-menu ul li:hover {
-    color: #ff523b;
+  color: #ff523b;
 }
 
 .side-menu ul li ul {
-    display: none;
-    z-index: 10;
-    top: 77px;
+  display: none;
+  z-index: 10;
+  top: 77px;
 }
 
 .side-menu ul li:hover ul {
-    display: block;
-    height: 400px;
-    margin-left: 12%;
-    padding: 0 100px 10px 10px;
-    position: fixed;
-    background-color: #ece7e7;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  display: block;
+  height: 400px;
+  margin-left: 12%;
+  padding: 0 100px 10px 10px;
+  position: fixed;
+  background-color: #ece7e7;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .fa-angle-right {
-    margin-top: 4px;
-    margin-right: 8px;
-    float: right;
+  margin-top: 4px;
+  margin-right: 8px;
+  float: right;
 }
 
-#menu-bar, #close-btn {
-    font-size: 30px;
-    margin: 10px;
-    color: #ff523b;
-    display: none;
+#menu-bar,
+#close-btn {
+  font-size: 30px;
+  margin: 10px;
+  color: #ff523b;
+  display: none;
 }
 
 @media only screen and (max-width: 600px) {
-    .side-menu {
-        width: 34%;
-        z-index: 20;
-        top: 133px;
-        position: fixed;
-        font-size: 10px;
-        display: none;
-    }
+  .side-menu {
+    width: 34%;
+    z-index: 20;
+    top: 133px;
+    position: fixed;
+    font-size: 10px;
+    display: none;
+  }
 
-    .side-menu ul li ul {
-        top: 133px;
-    }
+  .side-menu ul li ul {
+    top: 133px;
+  }
 
-    .side-menu ul li:hover ul {
-        margin-left: 24%;
-    }
+  .side-menu ul li:hover ul {
+    margin-left: 24%;
+  }
 
-    #menu-bar {
-        display: block;
-    }
-    
+  #menu-bar {
+    display: block;
+  }
 }
 
 /* ...............................slider............................ */
 
 .slider {
-    width: 85%;
-    margin-left: 15%;
-    padding: 0 10px;
+  width: 85%;
+  margin-left: 15%;
+  padding: 0 10px;
+}
+
+.slider img {
+  width: 100%;
+  height: 600px;
 }
 
 .carousel {
-    box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5);
 }
 
 .carousel-indicators {
-    z-index: 1 !important;
+  z-index: 1 !important;
 }
 
 @media only screen and (max-width: 600px) {
-    .slider {
-        width: 100%;
-        margin-left: 0;
-    }
+  .slider {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
+/* ...............................featured section............................ */
+
+.feature-section {
+  margin: 50px 0;
+}
+
+.feature-section img {
+  width: 100%;
+  padding: 20px 0;
+  transition: all 1s ease;
+  cursor: pointer;
+}
+
+.feature-section img:hover {
+  transform: scale(1.1);
+}
+
+/* ...............................On Sale section................................. */
+
+.title-box {
+  background-color: #ff523b;
+  color: aliceblue;
+  width: 180px;
+  padding: 4px 10px;
+  margin-bottom: 15px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.title-box h2 {
+  font-size: 24px;
+}
+
+.title-box::after {
+  content: "";
+  border-top: 40px solid #ff523b;
+  border-right: 50px solid transparent;
+  position: absolute;
+  display: flex;
+  margin-top: -4px;
+  margin-left: 170px;
+}
+
+/*.......................................Product Top CSS...............................*/
+
+.product-top img {
+  width: 100%;
+}
+
+.overlay-right {
+  display: block;
+  opacity: 0;
+  position: absolute;
+  margin-left: 0;
+  width: 70px;
+}
+
+.overlay-right .fa {
+  cursor: pointer;
+  background-color: #fff;
+  color: #000;
+  height: 35px;
+  width: 35px;
+  font-size: 20px;
+  padding: 7px;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.overlay-right .btn-secondary {
+  background: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+.product-top:hover .overlay-right {
+  opacity: 1;
+  margin-left: 5%;
+  transition: 0.5s;
+}
+
+/*.........................................product bottom css.................................. */
+
+
+.product-bottom .fa {
+    color: gold;
+    font-size: 10px;
+}
+
+.product-bottom h3 {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.product-bottom h5 {
+    font-size: 15px;
 }
