--- a/style.css
+++ b/style.css
@@ -240,19 +240,23 @@ body {
 
 .title-box h2 {
   font-size: 24px;
+  position: absolute;
 }
 
 .title-box::after {
   content: "";
   border-top: 40px solid #ff523b;
   border-right: 50px solid transparent;
-  position: absolute;
   display: flex;
   margin-top: -4px;
   margin-left: 170px;
 }
 
 /*.......................................Product Top CSS...............................*/
+
+.product-top {
+  position: relative;
+}
 
 .product-top img {
   width: 100%;
@@ -264,6 +268,7 @@ body {
   position: absolute;
   margin-left: 0;
   width: 70px;
+  top: 10px;
 }
 
 .overlay-right .fa {
@@ -292,17 +297,33 @@ body {
 
 /*.........................................product bottom css.................................. */
 
-
 .product-bottom .fa {
-    color: gold;
-    font-size: 10px;
+  color: gold;
+  font-size: 10px;
 }
 
 .product-bottom h3 {
-    font-size: 20px;
-    font-weight: bold;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .product-bottom h5 {
-    font-size: 15px;
+  font-size: 15px;
+}
+
+
+/* ...............................new products section................................. */
+
+.new-products {
+  margin: 50px 0;
+}
+
+/* ...............................website features................................. */
+
+.website-features {
+  margin: 60px 0;
+}
+
+.website-features img {
+  width: 20%;
 }
