--- a/style.css
+++ b/style.css
@@ -245,8 +245,8 @@ body {
 
 .title-box::after {
   content: "";
-  border-top: 40px solid #ff523b;
-  border-right: 50px solid transparent;
+  /* border-top: 40px solid #ff523b; */
+  /* border-right: 50px solid transparent; */
   display: flex;
   margin-top: -4px;
   margin-left: 170px;
@@ -312,7 +312,7 @@ body {
 }
 
 
-/* ...............................new products section................................. */
+/* ...............................best sellers section................................. */
 
 .new-products {
   margin: 50px 0;
@@ -321,9 +321,63 @@ body {
 /* ...............................website features................................. */
 
 .website-features {
-  margin: 60px 0;
+  margin: 40px 0;
 }
 
 .website-features img {
   width: 20%;
+}
+
+.feature-text {
+  /* margin-top: 10px; */
+  float: right;
+  width: 80%;
+  padding-left: 10px;
+}
+
+.feature-box {
+  padding-top: 20px;
+}
+
+/* ........................................footer............................ */
+
+.footer {
+  margin-top: 30px;
+  background-color: #000;
+  color: aliceblue;
+}
+
+.footer h1 {
+  font-size: 15px;
+  margin: 20px 0;
+}
+
+.footer p {
+  font-size: 12px;
+}
+
+.copyright {
+  margin-bottom: -80px;
+  text-align: center;
+  font-size: 15px;
+  padding-bottom: 20px;
+}
+
+.fa-heart {
+  color: red;
+  font-size: 15px;
+}
+
+.footer hr {
+  margin-top: 10px;
+  background-color: #ccc;
+}
+
+.footer-image img {
+  width: 150px;
+}
+
+.footer .row i {
+  padding-right: 10px;
+  font-size: 15px;
 }
